hotfix: Footer spacing on lg screens fixed

--- a/projects/03-shortly-website/css/style.css
+++ b/projects/03-shortly-website/css/style.css
@@ -1140,6 +1140,11 @@ video {
     padding-bottom: 1rem;
   }
 
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
